Added Picasso ImageLoader to load the images more smoothly. Also, added feature to allow users to order results by relevance and oldest.

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -7,4 +7,10 @@
         android:title="@string/search_title"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        android:orderInCategory="1"
+        android:title="@string/settings_menu_item"
+        app:showAsAction="ifRoom" />
 </menu>
