--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,12 +11,13 @@
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="2"
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
@@ -27,14 +28,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1565C0"
-            android:textSize="22sp"
+            android:textSize="18sp"
             tools:text="April Fools' Day snowstorm dumps up to 18 inches in New England" />
 
         <TextView
             android:id="@+id/timestamp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             tools:text="3 hours ago" />
     </LinearLayout>
 </LinearLayout>
